--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     background-color: rgb(226, 173, 102);
             width: 500px;
             height: 400px;
-            margin: 0 auto;
+            margin: 100px auto;
             padding: 20px;
             border-radius: 10px;
 }
